--- a/src/templates/flatpages/about.html
+++ b/src/templates/flatpages/about.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <meta name="robots" content="index">
         <title>Рогозин Григорий Тимофеевич - детский поэт, писатель.</title>
-        <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -261,6 +261,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/static/js/scripts.js"></script>
     </body>
 </html>
