--- a/src/templates/prose.html
+++ b/src/templates/prose.html
@@ -24,7 +24,7 @@
             <div class="container px-4 px-lg-5">
                 <a class="post-title" href="https://vk.com/id662757">Контакты</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Меню
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -38,12 +38,11 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('site/static/assets/img/utichye.png')">
+        <header class="masthead" style="background-image: url('/static/assets/img/utichye.png')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="post-heading">
-                            {% block prose_name %}
                             <h1><a href="/prose/lived/1">Прожитое не угасает
                                 </a>
                             </h1>
@@ -55,16 +54,8 @@
                             <h1><a href="/prose/pages/1">Странички истории
                                 </a>
                             </h1>
-                            {% endblock prose_name %}
                             <hr>
                             <h2 class="subheading">Воспоминания о жизни из дневников-мемуаров автора</h2>
-                            {% block page_number %}
-                            {% endblock page_number %}
-<!--                            <span class="meta">-->
-<!--                                Posted by-->
-<!--                                <a href="#!">Start Bootstrap</a>-->
-<!--                                on August 24, 2022-->
-<!--                            </span>-->
                         </div>
                     </div>
                 </div>
@@ -92,18 +83,6 @@
                             время и почувствовать, каким был мир вокруг.</p>
                         <p></p>
                         {% endblock content %}
-<!--                        <hr>-->
-<!--                        <a href="/prose/1">-->
-<!--                            <h2 class="post-title">Начало</h2>-->
-<!--                        </a>-->
-
-<!--                        <hr>-->
-<!--                        <p>-->
-<!--                            Placeholder text by-->
-<!--                            <a href="https://vk.com/id662757">Bushuev Alexander</a>-->
-<!--                            &middot; Images by-->
-<!--                            <a href="https://www.flickr.com/photos/nasacommons/">Bushuev Alexander</a>-->
-<!--                        </p>-->
                     </div>
                 </div>
             </div>
@@ -147,6 +126,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-<!--        <script src="js/scripts.js"></script>-->
+        <script src="/stastic/js/scripts.js"></script>
     </body>
 </html>
