inherit prose_by_id.html from default.html

--- a/src/templates/prose_by_id.html
+++ b/src/templates/prose_by_id.html
@@ -1,44 +1,60 @@
-{% extends 'prose.html' %}
+{% extends 'flatpages/default.html' %}
 
-{% block prose_name %}
-<h1><a href="/prose/{{ model_name }}/1">{{ full_name }}
-    </a>
-</h1>
-{% endblock prose_name %}
+{% block header %}
+<header class="masthead" style="background-image: url('/static/assets/img/rogozin_veselinki.jpg')">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="site-heading">
+                    <h1><a href="/prose/{{ model_name }}/1">{{ full_name }}</a></h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+{% endblock header %}
 
 
-{% block content %}
+{% block main_content %}
+<!-- Post Content-->
+<article class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <h1>Глава {{ pk }}</h1>
+                {% for line in page %}
+                <p>{{ line }}</p>
+                {% endfor %}
 
-<h1>Глава {{ pk }}</h1>
+                <hr>
 
-{% for line in page %}
-<p>{{ line }}</p>
-{% endfor %}
+                <form action="jump_to_page/" method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Перейти" />
+                </form>
 
-<hr>
-<form action="jump_to_page/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Перейти" />
-</form>
+                <hr>
 
-<hr>
-
-<table>
-    <tr>
-        <td>
-            <a class="page_next" href="next/">
-                <h2 class="post-title">Вперед</h2>
-            </a>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <a class="page_previous" href="previous/">
-                <h2 class="post-title">Назад</h2>
-            </a>
-        </td>
-    </tr>
-</table>
-
-{% endblock content %}
+                <!-- Table -->
+                <table>
+                <tr>
+                    <td>
+                        <a class="page_next" href="next/">
+                            <h2 class="post-title">Вперед</h2>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="page_previous" href="previous/">
+                            <h2 class="post-title">Назад</h2>
+                        </a>
+                    </td>
+                </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</article>
+{% endblock main_content %}
