--- a/src/templates/poetry.html
+++ b/src/templates/poetry.html
@@ -1,154 +1,46 @@
-<!DOCTYPE html>
+{% extends 'flatpages/default.html' %}
 {% load custom_filters %}
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Рогозин Григорий Тимофеевич - детский поэт, писатель. Курганская область." />
-        <meta name="author" content="" />
-        <meta name="robots" content="index">
-        <title>Прожитое не угасает</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-<!--        <link href="css/styles.css" rel="stylesheet" />-->
-        {% load static %}
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a class="post-title" href="https://vk.com/id662757">Контакты</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Главная</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">Об авторе</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/prose">Проза</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/poetry">Стихи для детей</a></li>
-                    </ul>
+{% block header %}
+<!-- Page Header-->
+<header class="masthead" style="background-image: url('/static/assets/img/rogozin_veselinki.jpg')">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="post-heading">
+                    {% block prose_name %}
+                    <h1>Стихи для детей
+                    </h1>
+                    {% endblock prose_name %}
+                    <hr>
+                    <h2 class="subheading">Сборники стихов Веселинки, </h2>
+                    {% block page_number %}
+                    {% endblock page_number %}
                 </div>
             </div>
-        </nav>
-        <!-- Page Header-->
-        <header class="masthead" style="background-image: url('/static/assets/img/rogozin_veselinki.jpg')">
-            <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <div class="post-heading">
-                            {% block prose_name %}
-                            <h1>Стихи для детей
-                            </h1>
-                            {% endblock prose_name %}
-                            <hr>
-                            <h2 class="subheading">Сборники стихов Веселинки и ???</h2>
-                            {% block page_number %}
-                            {% endblock page_number %}
-<!--                            <span class="meta">-->
-<!--                                Posted by-->
-<!--                                <a href="#!">Start Bootstrap</a>-->
-<!--                                on August 24, 2022-->
-<!--                            </span>-->
-                        </div>
-                    </div>
-                </div>
+        </div>
+    </div>
+</header>
+{% endblock header %}
+
+{% block main_content %}
+<!-- Post Content-->
+<article class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+
+                {% if poetry %}
+                    <table>
+                        {% for stih in poetry %}
+                        <a class='poetry_title' href="{% url 'stih_detail' stih.id %}"><b>{{ stih.title }}</b></a>
+                            <br>
+                        {% endfor %}
+                    </table>
+                {% endif %}
+
             </div>
-        </header>
-        <!-- Post Content-->
-        <article class="mb-4">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        {% block content %}
-<!--                        <h2 class="post-title">Форма для поиска</h2>-->
-
-<!--                            {% block search_form %}-->
-<!--                            {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}-->
-<!--                            <form action="" method="get">-->
-<!--                               {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}-->
-<!--                               {{ filterset.form.as_p }}-->
-<!--                               {# Добавим кнопку отправки данных формы #}-->
-<!--                               <input type="submit" value="Найти" />-->
-<!--                            </form>-->
-<!--                            <hr>-->
-<!--                            {% endblock search_form %}-->
-
-
-                        {% if poetry %}
-                            <table>
-                                {% for stih in poetry %}
-                                <a class='poetry_title' href="{% url 'stih_detail' stih.id %}"><b>{{ stih.title }}</b></a>
-                                    <br>
-                                {% endfor %}
-                            </table>
-                        {% endif %}
-
-
-                        {% endblock content %}
-<!--                        <hr>-->
-<!--                        <a href="/prose/1">-->
-<!--                            <h2 class="post-title">Начало</h2>-->
-<!--                        </a>-->
-
-<!--                        <hr>-->
-<!--                        <p>-->
-<!--                            Placeholder text by-->
-<!--                            <a href="https://vk.com/id662757">Bushuev Alexander</a>-->
-<!--                            &middot; Images by-->
-<!--                            <a href="https://www.flickr.com/photos/nasacommons/">Bushuev Alexander</a>-->
-<!--                        </p>-->
-                    </div>
-                </div>
-            </div>
-        </article>
-        <!-- Footer-->
-        <footer class="border-top">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Bushuev Alexander 2023</div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-<!--        <script src="js/scripts.js"></script>-->
-    </body>
-</html>
+        </div>
+    </div>
+</article>
+{% endblock main_content %}
