add usocial buttons to footer.html

--- a/src/templates/flatpages/footer.html
+++ b/src/templates/flatpages/footer.html
@@ -7,30 +7,10 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <ul class="list-inline text-center">
-                    <li class="list-inline-item">
-                        <a href="#!">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
+                    <!-- uSocial -->
+                    <script async src="https://usocial.pro/usocial/usocial.js?uid=56db3a9c4ef74244&v=6.1.5" data-script="usocial" charset="utf-8"></script>
+                    <div class="uSocial-Share" data-pid="ff80c97eec8741da5fa944a46eedbd47" data-type="share" data-options="round-rect,style1,default,absolute,horizontal,size48,eachCounter1,counter1,counter-after,mobile_position_right" data-social="vk,ok,wa,telegram"></div>
+                    <!-- /uSocial -->
                 </ul>
                 <div class="small text-center text-muted fst-italic">Copyright &copy; Bushuev Alexander 2023</div>
             </div>
