fix poetry.html add links to some stih

--- a/src/templates/poetry.html
+++ b/src/templates/poetry.html
@@ -8,14 +8,11 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="post-heading">
-                    {% block prose_name %}
-                    <h1>Стихи для детей
-                    </h1>
-                    {% endblock prose_name %}
+                    <h1>Стихи для детей</h1>
                     <hr>
-                    <h2 class="subheading">Сборники стихов Веселинки, </h2>
-                    {% block page_number %}
-                    {% endblock page_number %}
+                    <h2 class="subheading"><a href="/poetry/99">Веселинки</a></h2>
+                    <h2 class="subheading"><a href="/poetry/101">Чудесный столикт</a></h2>
+                    <h2 class="subheading"><a href="/poetry/102">Лесной концерт</a></h2>
                 </div>
             </div>
         </div>
