--- a/src/templates/flatpages/head.html
+++ b/src/templates/flatpages/head.html
@@ -18,5 +18,27 @@
     <!-- <link href="css/styles.css" rel="stylesheet" /> -->
     {% load static %}
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+
+    {% block yandex_metrics %}
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+           (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+           m[i].l=1*new Date();
+           for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+           k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+           (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+           ym(95901528, "init", {
+                clickmap:true,
+                trackLinks:true,
+                accurateTrackBounce:true,
+                webvisor:true
+           });
+        </script>
+        <noscript><div><img src="https://mc.yandex.ru/watch/95901528" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+    {% endblock yandex_metrics %}
+
+
 </head>
 {% endblock head %}
